--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/H1M4N5HU0P/MafiaBotIsOP/",
+  "repository": "https://github.com/jogide/MafiaBotIsOP/",
   "website": "https://github.com/H1M4N5HU0P/MafiaBotIsOP/",
   "success_url": "https://t.me/MafiaBot_Support",
   "env": {
@@ -24,7 +24,7 @@
     },
     "ALIVE_NAME": {
       "description": "Fill your Full name or Username like @H1M4N5HU0P. By default it is Mafia User",
-      "value": "@MafiaBot_Support",
+      "value": "Anonymous",
       "required": false
     },
     "ABUSE": {
